--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="list1" >
                 <ul >
                     <b>
-                <li> <a href="#">Home</a></li>
+                <li> <a href="#">Ho</a></li>
                 <li> <a href="/">Dropdown</a></li>
                 <li> <a href="/">Inner Page</a></li>
                 <li>  <a href="/">Contact Us</a></li>
